--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.85);
     overflow: hidden;
   }
   
@@ -16,16 +16,42 @@
     color: white;
   }
   
+  #myVideo {
+    position: fixed;
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 100%;
+  }
+
+  .content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    margin-bottom: 0.5%;
+    width: 100%;
+    padding: 20px;
+    border-radius: 10px;
+  }
+
+  #myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: rgba(0, 0, 0, 0.75);
+    color: #fff;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a:hover {
-    background-color: lightgrey;
-    color: #333;
   }
 
   .topnav h1 {
@@ -35,9 +61,5 @@
       color: steelblue;
   }
 
-  .headerPicture {
-    margin-right: auto;
-    margin-left: auto;
-    width: 50%;
-    padding: 10px;
-  }
+
+
