--- a/faktastyles.css
+++ b/faktastyles.css
@@ -100,13 +100,14 @@
   font-size: 20px;
   margin-top: 5px;
   margin-bottom: 25%;
+
   width: 83%;
   padding: 10px;
   border-radius: 10px;
 }
 .sidenav {
   height: 88.6%;
-  width: 250px;
+  width: 300px;
   position: fixed;
   z-index: 1;
   bottom: 0;
@@ -124,6 +125,7 @@
   padding: 25px 50px;
   text-decoration: none;
   font-size: 30px;
+  margin-bottom: 5px;
   background-color: rgba(70, 130, 180, 0.6);
   margin-right: relative;
   transition-duration: 0.2s;
