--- a/faktastyles.css
+++ b/faktastyles.css
@@ -139,3 +139,8 @@
   background-color: steelblue;
   color: white;
 }
+@media screen and (max-height: 3840px) {
+  .sidenav {
+    padding-top: 20px;
+  }
+}
