--- a/faktastyles.css
+++ b/faktastyles.css
@@ -100,7 +100,6 @@
   font-size: 20px;
   margin-top: 5px;
   margin-bottom: 25%;
-
   width: 83%;
   padding: 10px;
   border-radius: 10px;
@@ -108,14 +107,12 @@
 .sidenav {
   height: 88.6%;
   width: 300px;
-  position: fixed;
+  float: right;
   z-index: 1;
   bottom: 0;
   right: 0;
-  margin-right: 0.4%;
   background-color: rgba(70, 130, 180, 0.6);
   overflow-x: hidden;
-  padding-top: 30px;
 }
 .sidenav button {
   background: none;
@@ -138,9 +135,4 @@
 .sidenav button:hover {
   background-color: steelblue;
   color: white;
-}
-@media screen and (max-height: 1080px) {
-  .sidenav {
-    padding-top: 20px;
-  }
 }
