--- a/bpstyles.css
+++ b/bpstyles.css
@@ -4,7 +4,7 @@
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+.topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
@@ -14,12 +14,24 @@
     background-color: steelblue;
     color: white;
 }
+.topnav button{
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 25px 50px;
+    text-decoration: none;
+    font-size: 25px;
+    background-color: steelblue;
+    color: white;
+    border: none;
+    font-family: "Times New Roman";
+}
 #logud{
     float: right;
 }
 
 .userContainer{
-height: 625px;
+height: 85vh;
 background-color: steelblue;
 opacity: 80%;
 }
@@ -52,6 +64,7 @@ opacity: 80%;
     top: 135px;
     right: 50px;
     background-color: lightgray;
+    float: right;
 }
 #profileImg{
     position: relative;
@@ -69,9 +82,10 @@ opacity: 80%;
     position: absolute;
     left: 30px;
     top: 135px;
-    width: 1000px;
-    height: 550px;
+    width: auto;
+    height: 76vh;
     background-color: lightgray;
+    float: left;
 }
 #contentDiv{
     position: relative;
