Billeder indsat via js

--- a/faktastyles.css
+++ b/faktastyles.css
@@ -100,10 +100,10 @@
   font-size: 20px;
   margin-top: 5px;
   margin-bottom: 25%;
-
   width: 83%;
   padding: 10px;
   border-radius: 10px;
+  image-rendering: auto;
 }
 .sidenav {
   height: 88.6%;
