--- a/bpstyles.css
+++ b/bpstyles.css
@@ -137,18 +137,48 @@ opacity: 80%;
     height: 200px;
     border-radius: 10px;
     animation: pop 1s ease;
+    box-shadow: 0px 5px 7px 700px;
 }
 #newApp input{
+    margin-bottom: 5px;
+    padding: 3px;
     border-radius: 5px;
-    display: flex;
-    justify-content: center;
+    position: relative;
+    left: 65px;
+    border: none;
+    text-align: center;
 }
 #appComment{
-    text-align: justify;
+    display: flex;
+    justify-content: center;
     border: none;
-    width: 100%;
+    width: 300px;
     height: 80%;
+    resize: none;
 }
+#appBack{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 3px 7px;
+    border: none;
+    background-color: steelblue;
+    color: white;
+    border-radius: 5px;
+}
+#appSubmit{
+    position: absolute;
+    margin-left: 23%;
+    padding: 3px 7px;
+    border: none;
+    background-color: steelblue;
+    color: white;
+    border-radius: 5px;
+    margin-top: 3px;
+}
+
+
+/*Animations*/
 @keyframes pop{
     from{transform: scale(0)}
     50%{transform: scale(1.2)}
