--- a/sailHTML.css
+++ b/sailHTML.css
@@ -8,6 +8,10 @@
     height: 100px;
     border: none;
 }
-body{
-    
+#underliste{
+    list-style-type: none;
+}
+#overliste{
+    color: mediumvioletred;
+    list-style-type: none;
 }
