--- a/styles/bpstyles.css
+++ b/styles/bpstyles.css
@@ -5,6 +5,7 @@
 
 /* Style the links inside the navigation bar */
 .topnav a {
+  user-select: none;
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -14,7 +15,10 @@
   background-color: steelblue;
   color: white;
 }
+/* style class topnav */
 .topnav button {
+  cursor: pointer;
+  user-select: none;
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -96,11 +100,12 @@
   min-width: 200px;
   padding: 5px;
   text-align: center;
+  color: white;
   user-select: none;
-  background-color: #ffd53c;
+  background-color: rgb(0, 0, 0);
 }
 .content div:hover {
-  background-color: #af9124;
+  background-color: steelblue;
   cursor: pointer;
 }
 
