--- a/styles/bpstyles.css
+++ b/styles/bpstyles.css
@@ -7,20 +7,18 @@
 .topnav a {
   user-select: none;
   float: left;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 25px 50px;
   text-decoration: none;
   font-size: 25px;
   background-color: steelblue;
-  color: white;
 }
 /* style class topnav */
 .topnav button {
   cursor: pointer;
   user-select: none;
   float: left;
-  color: #f2f2f2;
   text-align: center;
   padding: 25px 50px;
   text-decoration: none;
@@ -58,7 +56,6 @@
   background-color: steelblue;
   border: none;
   outline: none;
-  color: white;
   font-size: 20px;
 }
 
